# bitsery-test

./: CMakeLists.txt  sdfu_codec.cpp  sdfu_codec.h  sdfu_codec_bitsery.h
